2005-10-24  Tom Tromey  <tromey@redhat.com>

	* java/security/acl/Group.java (isMember): Javadoc fix.
	(members): Changed return type.
	* java/security/acl/AclEntry.java (addPermission): Fixed javadoc.
	(checkPermission): Likewise.
	(permissions): Changed return type.
	* java/security/acl/Acl.java (entries): Changed return type.
	(getPermissions): Likewise.

2005-10-24  Tom Tromey  <tromey@redhat.com>

	* gnu/java/nio/SelectorImpl.java (keys): Changed type.
	(selected): Likewise.
	(SelectorImpl): Updated.
	(keys): Changed return type.
	(getFDsAsArray): Updated.
	(select): Likewise.
	(selectedKeys): Changed return type.
	(deregisterCancelledKeys): Updated.
	* java/nio/channels/Selector.java (selectedKeys): Changed return
	type.
	(keys): Likewise.

2005-10-24  Tom Tromey  <tromey@redhat.com>

	* java/awt/image/ReplicateScaleFilter.java (setProperties): Changed
	argument type.
	* java/awt/image/CropImageFilter.java (setProperties): Changed
	argument type.

2005-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/awt/image/BufferedImage.java:
	(getSources()): Genericized.
	* java/awt/image/ImageFilter.java:
	(setProperties(Hashtable<?,?>)): Likewise.
	* java/awt/image/MemoryImageSource.java:
	(MemoryImageSource(int,int,int[],int,int,Hashtable<?,?>)): Likewise.
	* java/awt/image/PixelGrabber.java:
	(setProperties(Hashtable<?,?>)): Likewise.
	* java/awt/image/renderable/RenderableImageOp.java:
	(getSources()): Likewise.
	* java/beans/Beans.java:
	(getInstanceOf(Object,Class<?>)): Likewise.
	(isInstanceOf(Object,Class<?>)): Likewise.
	* java/beans/EventSetDescriptor.java:
	(EventSetDescriptor(Class<?>,String,Class<?>,String)): Likewise.
	(EventSetDescriptor(Class<?>,String,Class<?>,String[],String,String)):
	Likewise.
	(EventSetDescriptor(Class<?>,Method[],Method,Method)): Likewise.
	(EventSetDescriptor(String,Class<?>,MethodDescriptor,Method,Method)):
	Likewise.
	(getListenerType()): Likewise.
	* java/beans/FeatureDescriptor.java: